# faasta

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
analyze/: Cargo.toml
analyze/src/: lib.rs
cli/: Cargo.toml  LICENSE  README.md
cli/certs/: cert.pem
cli/src/: auth.rs  embedded_cert.rs  github_oauth.rs  init.rs  lib.rs  main.rs  run.rs  test_build.rs
cli/template/: lib.rs  notCargo.toml
cli/tests/: test_oauth.rs
examples/faasta-website/: Cargo.toml  README.md
examples/faasta-website/src/: lib.rs
examples/retirement/: Cargo.toml  README.md
examples/retirement/src/: lib.rs
examples/waki/: Cargo.toml  README.md
examples/waki/src/: lib.rs
examples/wasi-capabilities/: Cargo.toml  README.md
examples/wasi-capabilities/src/: lib.rs
faasta/: Cargo.toml  all.html  attr.handler.html  index.html  sidebar-items.js  struct.Error.html  type.Result.html
faasta/blob/: fn.container_exists.html  fn.create_container.html  fn.delete.html  fn.get.html  fn.list.html  fn.put.html  index.html  sidebar-items.js  struct.Blobs.html  struct.Container.html
faasta/http/: fn.body_response.html  index.html  sidebar-items.js  struct.Html.html  struct.Json.html  struct.ResponseWithStatus.html  trait.IntoResponse.html
faasta/kv/: fn.delete.html  fn.get.html  fn.set.html  index.html  sidebar-items.js  struct.Bucket.html  struct.Kv.html
faasta/sql/: enum.DataType.html  fn.exec.html  fn.query.html  index.html  sidebar-items.js  struct.Field.html  struct.Row.html  struct.Sql.html  trait.IntoSqlParams.html  trait.IntoSqlValue.html
faasta/src/: blob.rs  http.rs  kv.rs  lib.rs  sql.rs
function/: Cargo.toml  Clippy.toml
function/.cargo/: config.toml
function/examples/: http_hello.rs
function/faasta-website/src/: lib.rs
function/src/: lib.rs
interface/: Cargo.toml
interface/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: .gcloudignore  Cargo.toml  Clippy.toml  README.md  all.html  build.rs  enum.Command.html  enum.RpcDriver.html  fn.build_rpc_runtime.html  fn.ensure_dir.html  fn.error_response.html  fn.function_dispatch.html  fn.health_handler.html  fn.json_response.html  fn.main.html  fn.map_function_error.html  fn.metrics_handler.html  fn.publish_handler.html  fn.redirect_handler.html  fn.run_http_redirect.html  fn.run_server.html  index.html  sidebar-items.js  struct.AppState.html  struct.Args.html  struct.Cli.html  struct.ServeArgs.html  struct.StorageVmArgs.html
server-wasi/: CLAUDE.md  Cargo.toml  README.md
server-wasi/certs/: cert.pem  key.pem
server-wasi/data/db/: db  snap.0000000000000152
server-wasi/data/metrics/: db  snap.000000000000238E
server-wasi/functions/: function.wasm  http-rust.wasm  http-server.wasm  http_rust.wasm
server-wasi/infra/: faasta-updater.timer  faasta.service  update-faasta.sh
server-wasi/src/: cert_manager.rs  github_auth.rs  main.rs  metrics.rs  rpc_service.rs
server-wasi/src/http/: mod.rs
server-wasi/src/quic/: mod.rs
server-wasi/src/wasi_server/: mod.rs
server/cert_manager/: index.html  sidebar-items.js  struct.CertManager.html  struct.PorkbunRequest.html  struct.PorkbunResponse.html
server/db/: fn.sqlite_path.html  index.html  sidebar-items.js  struct.Database.html
server/function_runtime/: fn.build_faasta_request.html  fn.ensure_dir.html  fn.faasta_response_to_http.html  fn.function_symbol_name.html  fn.resolve_function_name.html  fn.sanitize_function_name.html  index.html  sidebar-items.js  static.SERVER.html  struct.FaastaServer.html  struct.LoadedFunction.html  type.HandleRequestFn.html
server/github_auth/: constant.MAX_PROJECTS_PER_USER.html  constant.USER_AGENT.html  constant.USER_DB_TREE.html  index.html  sidebar-items.js  struct.GitHubAuth.html  struct.UserData.html
server/infra/: capabilities.md  faasta-updater.service  faasta.service  gcp  setup-faasta-autoupdate.sh  update-faasta.sh
server/kvm_guest/: constant.STORAGE.html  fn.ensure_linked.html  fn.kvmserverguest_remote_resume.html  fn.kvmserverguest_storage_wait_paused.html  fn.remote_resume.html  fn.storage.html  index.html  sidebar-items.js  static.INIT.html  struct.Storage.html
server/metrics/: fn.flush_metrics_to_db.html  fn.function_artifact_exists.html  fn.get_metrics.html  fn.get_or_create_metric.html  fn.spawn_periodic_flush.html  index.html  sidebar-items.js  static.FUNCTION_METRICS.html  static.METRICS_DB.html  struct.FunctionMetric.html  struct.Timer.html
server/quic/: fn.load_certificates.html  fn.load_private_key.html  fn.run_rpc_server.html  index.html
server/rpc_service/: constant.FUNCTIONS_DB_TREE.html  fn.create_service.html  index.html  struct.FunctionServiceImpl.html
server/src/: build_tooling.rs  cert_manager.rs  db.rs  function_worker.rs  github_auth.rs  in_process_function.rs  kvm_guest.rs  main.rs  metrics.rs  rpc_service.rs  storage.rs  wasm_function.rs  worker_protocol.rs
server/src/function_runtime/: mod.rs
server/src/quic/: mod.rs
server/storage/: constant.ARTIFACTS_DB_TREE.html  constant.FUNCTIONS_DB_TREE.html  constant.STORAGE_BUFFER_SIZE.html  constant.USER_DB_TREE.html  enum.StorageReply.html  enum.StorageRequest.html  fn.artifact_exists.html  fn.call.html  fn.decode_metric_value.html  fn.delete_artifact.html  fn.delete_function.html  fn.ensure_dir.html  fn.expect_unit.html  fn.flush_metrics.html  fn.get_artifact.html  fn.get_function.html  fn.get_metric.html  fn.get_user.html  fn.handle_storage_request.html  fn.iter_metrics.html  fn.iter_metrics_from_db.html  fn.metric_exists.html  fn.process_request.html  fn.put_artifact.html  fn.put_function.html  fn.put_user.html  fn.run_storage_vm.html  fn.unexpected_reply.html  fn.upsert_metric.html  index.html  sidebar-items.js
server/wasi_server/: fn.build_faasta_request.html  fn.ensure_dir.html  fn.faasta_response_to_http.html  fn.function_symbol_name.html  fn.resolve_function_name.html  fn.sanitize_function_name.html  index.html  sidebar-items.js  static.SERVER.html  struct.FaastaServer.html  struct.LoadedFunction.html  type.HandleRequestFn.html
(+1520 files in other folders)
