[workspace]
resolver = "2"
edition = '2024'
members = ["cli", "interface", "server-wasi"]
exclude = ["function", "**/builds"]

[workspace.dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "rt"] }
serde_json = "1.0.134"
bitcoderpc = {path = "../bitrpc"}
