[package]
name = "faasta-analyze"
version = "0.0.1"
edition = "2021"

[dependencies]

anyhow.workspace = true
syn = { version = "2.0", features = ["full", "visit", "parsing", "printing"] }
tokio = { version = "1.42.0", features = ["full"] }
geiger = "0.4.12"
lazy_static = "1.5.0"
toml = "0.8.19"
log = "0.4.22"
regex = "1.10.5"