[package]
name = "cargo-faasta"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Build and deploy wasi-http wasm to the faasta serverless platform"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12.12", features = ["blocking", "stream", "multipart", "json"] }
clap = { version = "4", features = ["derive"] }
clap-cargo = "0.15.1"
indicatif = "0.17.11"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
oauth2 = "4.4.2"
open = "5.0.1"
tiny_http = "0.12.0"
url = "2.5.0"
faasta-interface = { path = "../interface", version = "0.1.0" }
github-app-auth = "3.0.1"
tracing = "0.1.40"
bitrpc = { path = "../../bitrpc", features = ["cyper"] }
