[package]
name = "cargo-faasta"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Build and deploy wasi-http wasm to the faasta serverless platform"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bitrpc = { version = "0.2.0", features = ["cyper"] }
clap = { version = "4", features = ["derive"] }
clap-cargo = "0.18"
compio = { version = "0.16.0", features = ["macros", "time"] }
cyper = { version = "0.5.0", features = ["json", "rustls"] }
dirs = "6"
faasta-interface = { path = "../interface", version = "0.2.0" }
github-app-auth = "3.0.1"
http = "1"
indicatif = "0.18"
oauth2 = { version = "5", default-features = false }
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tiny_http = "0.12.0"
tracing = "0.1.40"
url = "2.5.0"
