[package]
name = "faasta"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Faasta SDK for WASI HTTP functions"

[dependencies]
anyhow = "1"
faasta-macros = { version = "0.2.0", path = "../macros" }
omnia-wasi-blobstore = "0.31.0"
omnia-wasi-keyvalue = "0.31.0"
omnia-wasi-sql = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasip3 = { version = "0.5.0", features = ["http-compat"] }
