[package]
name = "server-wasi"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitcode = "0.6"
bitrpc = { version = "0.2.0", features = ["compio-server"] }
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
compio = { version = "0.16.0", features = ["macros", "rustls", "time"] }
compio-dispatcher = "0.8.0"
compio-quic = { version = "0.5.0", features = ["h3"] }
cyper = { version = "0.5.0", features = ["json", "rustls"] }
cyper-core = "0.5.0"
dashmap = "6"
dotenvy = "0.15"
faasta-interface = { path = "../interface" }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
moka = { version = "0.12.10", features = ["future"] }
num_cpus = "1"
once_cell = "1"
rustls = { version = "0.22.4", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "37.0"
wasmtime-wasi = { version = "37.0", features = ["p3"] }
wasmtime-wasi-http = "37.0"
x509-parser = "0.17.0"
