[package]
name = "server"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
bincode = "2.0.1"
bitrpc = { version = "0.3.0", features = ["compio-server"] }
bytes = "1"
cap-async-std = { version = "3.4.5", features = ["tokio1"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
compio = { version = "0.18.0", features = ["macros", "rustls", "time", "polling"] }
compio-quic = { version = "0.7.0", features = ["h3"] }
cyper = { version = "0.8.3", features = ["json", "rustls"] }
cyper-core = "0.8.0"
dashmap = "6"
dotenvy = "0.15"
faasta-interface = { path = "../interface" }
faasta-types = { path = "../faasta-types" }
futures-util = "0.3"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1"
libc = "0.2"
libloading = "0.9"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = { version = "0.23.37", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stabby = "72.1.2-rc1"
tokio = { version = "1", features = ["rt", "macros", "time", "net", "sync", "fs", "io-util"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.18.1"

[build-dependencies]
cc = "1"

[[bin]]
name = "faasta-server"
path = "src/main.rs"

[[bin]]
name = "faasta-worker"
path = "src/bin/faasta-worker.rs"
