[package]
name = "server"
version = "0.2.0"
edition = "2024"
autobins = false

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
bincode = "2.0.1"
bitrpc = { version = "0.4.0", features = ["tokio"] }
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
dotenvy = "0.15"
faasta-interface = { path = "../interface" }
futures-util = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1"
once_cell = "1"
omnia = "0.31.0"
omnia-wasi-blobstore = "0.31.0"
omnia-wasi-keyvalue = "0.31.0"
omnia-wasi-sql = "0.31.0"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.37", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "fs", "io-util"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "44.0.1"
wasmtime-wasi = { version = "44.0.1", features = ["p3"] }
wasmtime-wasi-http = { version = "44.0.1", default-features = false, features = ["default-send-request", "p3", "component-model-async"] }
x509-parser = "0.18.1"

[build-dependencies]
cc = "1"

[[bin]]
name = "faasta-server"
path = "src/main.rs"
