[package]
name = "website"
version = "0.1.0"
edition = "2024"
description = "Official website for the Faasta project using WASI-HTTP"

[lib]
crate-type = ["cdylib"]

[dependencies]
cap-async-std = { version = "3.4.2", features = ["tokio1"] }
faasta-macros = { path = "../../macros" }
faasta-types = { path = "../../faasta-types" }
maud = "0.27"

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"

[workspace]
