[workspace]

[package]
name = "retirement"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cap-async-std = { version = "3.4.2", features = ["tokio1"] }
faasta-macros = { path = "../../macros" }
faasta-types = { path = "../../faasta-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"
