[workspace]

[package]
name = "http_proxy"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cap-async-std = { version = "3.4.2", features = ["tokio1"] }
faasta-macros = { path = "../../macros" }
faasta-types = { path = "../../faasta-types" }
stabby = "72.1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"
